add 2007T4 Replace with c++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,11 @@ project(SICT_InterView_Code)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(SICT_InterView_Code main.cpp)
-add_executable(2006T1 2006/T1.c)
-add_executable(2006T2 2006/T2.c)
-add_executable(2006T3 2006/T3.c)
+add_executable(2006T1 2006/T1.cpp)
+add_executable(2006T2 2006/T2.cpp)
+add_executable(2006T3 2006/T3.cpp)
 
-add_executable(2007T1 2007/T1.c)
-add_executable(2007T2 2007/T2.c)
-add_executable(2007T3 2007/T3.c)
+add_executable(2007T1 2007/T1.cpp)
+add_executable(2007T2 2007/T2.cpp)
+add_executable(2007T3 2007/T3.cpp)
+add_executable(2007T4 2007/T4.cpp)
