add 2007T5 Replace with c++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(2007T1 2007/T1.cpp)
 add_executable(2007T2 2007/T2.cpp)
 add_executable(2007T3 2007/T3.cpp)
 add_executable(2007T4 2007/T4.cpp)
+add_executable(2007T5 2007/T5.cpp)
