--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,5 @@ add_executable(2007T5 2007/T5.cpp)
 
 add_executable(2008T1 2008/T1.cpp)
 add_executable(2008T2 2008/T2.cpp)
+add_executable(2008T3 2008/T3.cpp)
+add_executable(2008T4 2008/T4.cpp)
