--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,5 @@ add_executable(2018T1 2018/T1.cpp)
 add_executable(2018T2 2018/T2.cpp)
 add_executable(2018T3 2018/T3.cpp)
 add_executable(2018T4 2018/T4.cpp)
+
+add_executable(2019T1 2019/T1.cpp)
